[project]
name = "dinov2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "omegaconf",
    "torchmetrics",
    "fvcore",
    "iopath",
    "xformers",
    "submitit",
    "cuml-cu11",
    "hydra-core>=1.3.2",
    "datasets==3.6.0",
]
