[project]
name = "dinov2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torchvision",
    "omegaconf",
    "torchmetrics",
    "fvcore",
    "iopath",
    "xformers",
    "submitit",
    "cuml-cu11",
    "hydra-core>=1.3.2",
    "datasets==3.6.0",
    "torch==2.0.0",
]
